--- a/index.html
+++ b/index.html
@@ -5,6 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<header>
+    <style>
+        body{
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+        header{
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px;
+        }
+        section{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+        .tarjeta{
+            background-color: #f9f9f9;
+            margin: 10px;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            width: 300px;
+        }
+        .titulo{
+            font-size: 24px;
+            margin: 0;
+            padding: 0;
+        }
+        .descripcion{
+            font-size: 16px;
+            color: #333;
+        }
+    </style>
+    <header>
+        <h1>tarjetas con css</h1>
+</header>
 <body>
     <section>
         <div class="tarjeta">
